[package]
name = "weframe-client"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = [
    "console",
    "Window",
    "Document",
    "WebSocket",
    "MessageEvent",
    "ErrorEvent",
    "CloseEvent",
] }
weframe-shared = { path = "../weframe-shared" }
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.4"
js-sys = "0.3"
wasm-bindgen-futures = "0.4"
serde_json = "1.0"
parking_lot = "0.12"
uuid = { version = "0.8", features = ["v4", "wasm-bindgen"] }
getrandom = { version = "0.2", features = ["js"] }
