[package]
name = "weframe-client"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3"
web-sys = { version = "0.3", features = [
    "console",
    "WebSocket",
    "MessageEvent",
] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde-wasm-bindgen = "0.4"
uuid = { version = "1.0", features = ["v4", "js"] }
weframe-shared = { path = "../weframe-shared" }
